--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,17 @@
 /* Ratawa*/
+.body{
 
+}
+header{
+    background-image:url(https://eloboostroyal.es/assets/images/new/syndra-bg-v2.jpg);
+}
 
+p{
+    color: white;
+}
+h2{
+    color: white;
+}
 
 
 
